==> mcb32/MCB32/00_Unterlagen_MCB32/00_APP_Notes/APPN_RS232/03_Keil_RS232/99_Entwicklen/RS232_Ohne_P0P1Lib_REVD/Utilities/et_stm32f_arm_kit_lcd.c <==
#include "et_stm32f_arm_kit_lcd.h"
#include "fonts.h"

void LCD_Setup(void)
{ 
  long cnt ;
	
  /* Configure the LCD Control pins --------------------------------------------*/
  LCD_GPIO_Config();
  GPIO_WriteBit(LCD_BL_GPIO_PORT, LCD_BL_GPIO_PIN, Bit_SET);
  
  /* Configure the LCD_SPI interface ----------------------------------------------*/
  LCD_SPIConfig();
  delay_ms(50); /* Delay 50 ms */
	
  //-------------- Start GLCD --------------
  LCD_WriteCommand(0x01);   																																			//Software reset
  delay_ms(5);
  LCD_WriteCommand(0x28);    																																			//display off
    
  LCD_WriteCommand(0xCF);
  LCD_WriteData(0x00);
  LCD_WriteData(0x83);
  LCD_WriteData(0x30);
      
  LCD_WriteCommand(0xED);
  LCD_WriteData(0x64);
  LCD_WriteData(0x03);
  LCD_WriteData(0x12);
  LCD_WriteData(0x81);
  
  LCD_WriteCommand(0xE8);
  LCD_WriteData(0x85);
  LCD_WriteData(0x01);
  LCD_WriteData(0x79);
  
  LCD_WriteCommand(0xCB);
  LCD_WriteData(0x39);
  LCD_WriteData(0x2C);
  LCD_WriteData(0x00);
  LCD_WriteData(0x34);
  LCD_WriteData(0x02);
  
  LCD_WriteCommand(0xF7);
  LCD_WriteData(0x20);
  
  LCD_WriteCommand(0xEA);
  LCD_WriteData(0x00);
  LCD_WriteData(0x00);
  
  //---------------- Power Control -------------------   
  LCD_WriteCommand(0xC0);    																																			//Power Control 1
  LCD_WriteData(0x26);
   
  LCD_WriteCommand(0xC1);    																																			//Power Control2
  LCD_WriteData(0x11);

  //----------------- VCOM --------------------
  LCD_WriteCommand(0xC5);    																																			//VCOM Control 1
  LCD_WriteData(0x35);
  LCD_WriteData(0x3E);

  LCD_WriteCommand(0xC7);    																																			//VCOM Control 2
  LCD_WriteData(0xBE);

  //----------------- Memory access Control ---------------
  	
	//1010 1000
	//MY  = 1 : Row Address Order
	//MX  = 0
	//MV  = 1
	//ML  = 0  
	
	//BGR = 1 : Color = BGR
	//MH  = 0 : Horizontal Refresh
	//0
	//0
	LCD_WriteCommand(0x36);    																																			//Memory access Control 
  LCD_WriteData(0xA8);    																																				//my,mx=1,mv,ml,BGR,mh
	//==============================================================================================
	
  LCD_WriteCommand(0x3A);    																																			//Pixel format set
  LCD_WriteData(0x55);   																																					//16 bit/Pixel

  //---------------------- Frame Rate ----------------------
  LCD_WriteCommand(0xB1);    																																			//Frame rate
  LCD_WriteData(0x00);
  LCD_WriteData(0x1B);    																																				//default

  //---------------------- Gamma -------------------
  LCD_WriteCommand(0xF2);    																																			//3Gamma Function Disable 
  LCD_WriteData(0x08);  
   
  LCD_WriteCommand(0x26);    
  LCD_WriteData(0x01);    																																				// Gamma Set 4 gamma curve 01/02/04/08
   
  LCD_WriteCommand(0xE0);    																																			//Positive gamma correction    
  LCD_WriteData(0x1F);   
  LCD_WriteData(0x1A);     
  LCD_WriteData(0x18);   
  LCD_WriteData(0x0A);     
  LCD_WriteData(0x0F);   
  LCD_WriteData(0x06);     
  LCD_WriteData(0x45);   
  LCD_WriteData(0x87);     
  LCD_WriteData(0x32);   
  LCD_WriteData(0x0A);     
  LCD_WriteData(0x07);   
  LCD_WriteData(0x02);     
  LCD_WriteData(0x07);   
  LCD_WriteData(0x05);     
  LCD_WriteData(0x00);   

  LCD_WriteCommand(0xE1);    																																			//Negamma correction    
  LCD_WriteData(0x00);   
  LCD_WriteData(0x25);     
  LCD_WriteData(0x27);   
  LCD_WriteData(0x05);     
  LCD_WriteData(0x10);   
  LCD_WriteData(0x09);     
  LCD_WriteData(0x3A);   
  LCD_WriteData(0x78);     
  LCD_WriteData(0x4D);   
  LCD_WriteData(0x05);     
  LCD_WriteData(0x18);   
  LCD_WriteData(0x0D);     
  LCD_WriteData(0x38);   
  LCD_WriteData(0x3A);     
  LCD_WriteData(0x1F);   
  
  //------------------ SET DDRAM Address ------------------
	LCD_WriteCommand(0x2A);    																																			//Column Set(X=0..319)   
	LCD_WriteData(0x00);    																																				//Strart address(H) = 0x0000
  LCD_WriteData(0x00);    																																				//Strart address(L) = 0x0000(0)	
	LCD_WriteData(0x01);    																																				//End address(H) = 0x01
  LCD_WriteData(0x3F);    																																				//End address(L) = 0x3F(319)
  		
	LCD_WriteCommand(0x2B);    																																			//Page Address Set(Y=0..239)    
	LCD_WriteData(0x00);    																																				//Strart address(H) = 0x00
  LCD_WriteData(0x00);    																																				//Strart address(L) = 0x00(0)	
	LCD_WriteData(0x00);    																																				//End address(H) = 0x00
  LCD_WriteData(0xEF);    																																				//End address(L) = 0xEF(239)  
	   
  LCD_WriteCommand(0xB7);    																																			//Entry mode set    
  LCD_WriteData(0x07);    																																				//Normal display

  //-------------------- Display -----------------
  LCD_WriteCommand(0xB6);    																																			//Display Function Control  
  LCD_WriteData(0x0A);   
  LCD_WriteData(0xC2);     //0x82,0xE2,0xC2
  LCD_WriteData(0x27);   
  LCD_WriteData(0x00);     

  LCD_WriteCommand(0x11);    																																			//Sleep Out       
  delay_ms(100);

  //------- Clear the contents of the display buffer. --------
  LCD_WriteCommand(0x2C);    																																			//Memmory Write  
  for(cnt = 0;cnt<((long)240*320);cnt++)
  LCD_WriteData16(Black);    																																			//Back-Ground Color Black
	
  LCD_WriteCommand(0x29);    																																			//Display On       
  delay_ms(100);
  
  GPIO_WriteBit(LCD_BL_GPIO_PORT, LCD_BL_GPIO_PIN, Bit_SET);   																		//Back Light ON     
}

void LCD_Clear(uint16_t Color)
{	
  uint32_t index = 0;
 
  LCD_SetCursor(0,0); 			
	LCD_WriteCommand(0x2C);    																																			//Memmory Write  																											// Memory Write							
  for(index = 0; index < ((long)240*320); index++)
  {
		LCD_WriteData16(Color);
  }
}

void LCD_SetCursor(uint16_t Xpos, uint16_t Ypos)
{  
	LCD_WriteCommand(0x2B);    																																		//Page address Set(X=0..239)    
	LCD_WriteData((char)(Xpos >> 8) & 0xFF); 																											//Strart address(H) 
  LCD_WriteData((char)(Xpos & 0xFF));  																													//Strart address(L) 		
	
	LCD_WriteCommand(0x2A);    																																		//Column Set(Y=0..319)
  LCD_WriteData((char)(Ypos >> 8) & 0xFF);  																										//Strart address(H)
  LCD_WriteData((char)(Ypos & 0xFF));  																													//Strart address(L)	
}

void LCD_DrawChar(uint16_t Xpos, uint16_t Ypos, const uint16_t *c)
{
  uint32_t index = 0, i = 0;
  uint16_t Xaddress = 0;
   
  Xaddress = Xpos;
  
  LCD_SetCursor(Xaddress, Ypos);
  
  for(index = 0; index < 24; index++)
  {
		LCD_WriteCommand(0x2C);
    for(i = 0; i < 16; i++)
    {
      if((c[index] & (1 << i)) == 0x00)
      {
        LCD_WriteData16(BackColor);
      }
      else
      {
        LCD_WriteData16(TextColor);
      }
    }   
    Xaddress++;
    LCD_SetCursor(Xaddress, Ypos);
  }
}

void LCD_DrawLine(uint16_t Xpos, uint16_t Ypos, uint16_t Length, uint8_t Direction)
{
	uint32_t i = 0;
    
  if(Direction == Horizontal)
  { 
		LCD_SetCursor(Xpos, Ypos);
    LCD_WriteCommand(0x2C);
    for(i = 0; i < Length; i++)
    {
      LCD_WriteData16(TextColor);
    }   
  }
  else
  {		
    for(i = 0; i < Length; i++)
    {
			LCD_SetCursor(Xpos, Ypos);
			LCD_WriteCommand(0x2C);
      LCD_WriteData16(TextColor);
      Xpos++;      
    }
  }
}

unsigned char TCS_SPI_Write_Byte(unsigned char DataByte)
{
  unsigned char Bit,result = 0 ;				 	   

  for (Bit = 0; Bit < 8; Bit++)              																											// 8 Bit Write
  {		
    GPIO_WriteBit(TCS_GPIO_PORT, TCS_SCK_PIN, Bit_SET); 																					// Start Clock  High
    
		//--------- write Data ---------
		if((DataByte & 0x80)== 0x80)
		{	
		  GPIO_WriteBit(TCS_GPIO_PORT, TCS_MOSI_PIN, Bit_SET); 																				// Set bit data = 1
		}	
		else
		{	
		  GPIO_WriteBit(TCS_GPIO_PORT, TCS_MOSI_PIN, Bit_RESET);  																		// Clear bit data = 0
		}	
		   	
		GPIO_WriteBit(TCS_GPIO_PORT, TCS_SCK_PIN, Bit_RESET);    																			// Clock low
    
		DataByte <<= 1;	 																																							// Shift Next Bit Data
      
	  //---------- Read Data -------
	  result <<= 1;	
	 											  	  
		if (GPIO_ReadInputDataBit(TCS_GPIO_PORT,TCS_MISO_PIN) == Bit_SET)
    {
		  result |= 0x01;
		}
	}
	return (result);                    
}

uint16_t TCS_Read_X(void)
{
  int32_t x, xr;

  long tcs_adc_X ,tcs_adc_Y;
  unsigned char buf_data[4]={0,0,0,0};
  
  if (GPIO_ReadInputDataBit(TCS_GPIO_PORT,TCS_PEN_PIN) == Bit_RESET)
  {
    GPIO_WriteBit(TCS_GPIO_PORT, TCS_CS_PIN, Bit_RESET);																					// Enable Touch Interface
	
    buf_data[0] = TCS_SPI_Write_Byte(0xD0);																												// Write Command Measure X-Position 
	  buf_data[0] = TCS_SPI_Write_Byte(0x00);																												// Read ADC data X-Position (7-bit byte High) data: 0ddddddd	(bit) 
	  buf_data[1] = TCS_SPI_Write_Byte(0x90);																												// Write Command Measure Y-Position ; Read ADC data X-Position (5-bit byte Low)  data:ddddd000(bit)
	  buf_data[2] = TCS_SPI_Write_Byte(0x00);																												// Read ADC data Y-Position(7-bit byte High) data: 0ddddddd (bit)
	  buf_data[3] = TCS_SPI_Write_Byte(0x00);																												// Read ADC data Y-Position(5-bit byte Low)  data: ddddd000 (bit)
  
	  tcs_adc_X  = buf_data[0];																																			// Mark ADC Data X-Position 12 bit
	  tcs_adc_X  = tcs_adc_X << 5;
	  tcs_adc_X |= buf_data[1] >> 3;
	  tcs_adc_X  = tcs_adc_X & 0x00000FFF;
	 
	  tcs_adc_Y  = buf_data[2];   																																	// Mark ADC Data Y-Position 12 bit
	  tcs_adc_Y  = tcs_adc_Y << 5;   																																// Shift 7 bit High
	  tcs_adc_Y |= buf_data[3] >> 3;   																															// Shift 5 bit low
	  tcs_adc_Y  = tcs_adc_Y & 0x00000FFF;																													// total ADC data 12 bit
	
	  GPIO_WriteBit(TCS_GPIO_PORT, TCS_CS_PIN, Bit_SET);																						// Disable Touch Interface			
	
    x = 4095-tcs_adc_Y;  																																					// ADC 12 bit :LCD Start Landscape	
  }
  else
  {
    x = 0;
  }
  
  /* first correction */
  xr =  (x * 320) >> 12;
 
  /* second correction */
  xr = ((xr * 32)/29) - 17;
  
  if(xr <= 0)
  {
    xr = 0;
  }

  return (uint16_t)(xr); 
}

uint16_t TCS_Read_Y(void)
{
  int32_t y, yr;

  //long dif_adc_X,dif_adc_Y;

  long tcs_adc_X ,tcs_adc_Y;
  unsigned char buf_data[4]={0,0,0,0};

  if (GPIO_ReadInputDataBit(TCS_GPIO_PORT,TCS_PEN_PIN) == Bit_RESET)
  {    
    GPIO_WriteBit(TCS_GPIO_PORT, TCS_CS_PIN, Bit_RESET);																					// Enable Touch Interface
	
    buf_data[0] = TCS_SPI_Write_Byte(0xD0);																												// Write Command Measure X-Position 
	  buf_data[0] = TCS_SPI_Write_Byte(0x00);																												// Read ADC data X-Position (7-bit byte High) data: 0ddddddd	(bit) 
	  buf_data[1] = TCS_SPI_Write_Byte(0x90);																												// Write Command Measure Y-Position ; Read ADC data X-Position (5-bit byte Low)  data:ddddd000(bit)
	  buf_data[2] = TCS_SPI_Write_Byte(0x00);																												// Read ADC data Y-Position(7-bit byte High) data: 0ddddddd (bit)
	  buf_data[3] = TCS_SPI_Write_Byte(0x00);																												// Read ADC data Y-Position(5-bit byte Low)  data: ddddd000 (bit)

	  tcs_adc_X  = buf_data[0];																																			// Mark ADC Data X-Position 12 bit
	  tcs_adc_X  = tcs_adc_X << 5;
	  tcs_adc_X |= buf_data[1] >> 3;
	  tcs_adc_X  = tcs_adc_X & 0x00000FFF;
	 
	  tcs_adc_Y  = buf_data[2];   																																	// Mark ADC Data Y-Position 12 bit
	  tcs_adc_Y  = tcs_adc_Y << 5;   																																// Shift 7 bit High
	  tcs_adc_Y |= buf_data[3] >> 3;   																															// Shift 5 bit low
	  tcs_adc_Y  = tcs_adc_Y & 0x00000FFF;																													// total ADC data 12 bit
	
	  GPIO_WriteBit(TCS_GPIO_PORT, TCS_CS_PIN, Bit_SET);																						// Disable Touch Interface				

    y = tcs_adc_X;	 																																							// ADC 12 bit :LCD Start Landscape	
  }
  else
  {
    y = 0;
  }
  
  yr= (y * 240) >> 12;
  yr = ((yr * 240) / 217) - 12;
  
  if(yr <= 0)
  {
    yr = 0;
  }

  return (uint16_t)(yr); 
}
