==> bdintu/Com-Interface/Lab08_LCD_TCS/ET_STM32F107/et_stm32f_arm_kit_lcd.c <==
#include "stm32f1xx_hal.h"
#include "et_stm32f_arm_kit_lcd.h"
#include "fonts.h"
#define START_BYTE      0x70
#define SET_INDEX       0x00
#define READ_STATUS     0x01
#define LCD_WRITE_REG   0x02
#define LCD_READ_REG    0x03
#define LCD_Timeout			200

void LCD_Setup(void)
{ 
/* Configure the LCD Control pins --------------------------------------------*/
  //LCD_GPIO_Config();
  //GPIO_WriteBit(LCD_BL_GPIO_PORT, LCD_BL_PIN, Bit_SET);
	HAL_GPIO_WritePin(LCD_BL_GPIO_PORT, LCD_BL_PIN, GPIO_PIN_SET);
  
/* Configure the LCD_SPI interface ----------------------------------------------*/
  //LCD_SPIConfig();
  //_delay_(5); /* Delay 50 ms */
	HAL_Delay(50);

  /* Start Initial Sequence ------------------------------------------------*/
  LCD_WriteReg(R229, 0x8000); /* Set the internal vcore voltage */
  LCD_WriteReg(R0,  0x0001); /* Start internal OSC. */
  LCD_WriteReg(R1,  0x0100); /* set SS and SM bit */
  LCD_WriteReg(R2,  0x0700); /* set 1 line inversion */
  LCD_WriteReg(R3,  0x1030); /* set GRAM write direction and BGR=1. */
  LCD_WriteReg(R4,  0x0000); /* Resize register */
  LCD_WriteReg(R8,  0x0202); /* set the back porch and front porch */
  LCD_WriteReg(R9,  0x0000); /* set non-display area refresh cycle ISC[3:0] */
  LCD_WriteReg(R10, 0x0000); /* FMARK function */
  LCD_WriteReg(R12, 0x0000); /* RGB interface setting */
  LCD_WriteReg(R13, 0x0000); /* Frame marker Position */
  LCD_WriteReg(R15, 0x0000); /* RGB interface polarity */

  /* Power On sequence -----------------------------------------------------*/
  LCD_WriteReg(R16, 0x0000); /* SAP, BT[3:0], AP, DSTB, SLP, STB */
  LCD_WriteReg(R17, 0x0000); /* DC1[2:0], DC0[2:0], VC[2:0] */
  LCD_WriteReg(R18, 0x0000); /* VREG1OUT voltage */
  LCD_WriteReg(R19, 0x0000); /* VDV[4:0] for VCOM amplitude */
  //_delay_(20);                 /* Dis-charge capacitor power voltage (200ms) */
	HAL_Delay(200);
	
  LCD_WriteReg(R16, 0x17B0); /* SAP, BT[3:0], AP, DSTB, SLP, STB */
  LCD_WriteReg(R17, 0x0137); /* DC1[2:0], DC0[2:0], VC[2:0] */
  //_delay_(5);                  /* Delay 50 ms */
	HAL_Delay(50);
	
  LCD_WriteReg(R18, 0x0139); /* VREG1OUT voltage */
  //_delay_(5);                  /* Delay 50 ms */
	HAL_Delay(50);
	
  LCD_WriteReg(R19, 0x1d00); /* VDV[4:0] for VCOM amplitude */
  LCD_WriteReg(R41, 0x0013); /* VCM[4:0] for VCOMH */
  //_delay_(5);                  /* Delay 50 ms */
	HAL_Delay(50);
	
  LCD_WriteReg(R32, 0x0000); /* GRAM horizontal Address */
  LCD_WriteReg(R33, 0x0000); /* GRAM Vertical Address */

  /* Adjust the Gamma Curve ------------------------------------------------*/
  LCD_WriteReg(R48, 0x0006);
  LCD_WriteReg(R49, 0x0101);
  LCD_WriteReg(R50, 0x0003);
  LCD_WriteReg(R53, 0x0106);
  LCD_WriteReg(R54, 0x0b02);
  LCD_WriteReg(R55, 0x0302);
  LCD_WriteReg(R56, 0x0707);
  LCD_WriteReg(R57, 0x0007);
  LCD_WriteReg(R60, 0x0600);
  LCD_WriteReg(R61, 0x020b);
  
  /* Set GRAM area ---------------------------------------------------------*/
  LCD_WriteReg(R80, 0x0000); /* Horizontal GRAM Start Address */
  LCD_WriteReg(R81, 0x00EF); /* (240-1) Horizontal GRAM End Address */
  LCD_WriteReg(R82, 0x0000); /* Vertical GRAM Start Address */
  LCD_WriteReg(R83, 0x013F); /* (320-1) Vertical GRAM End Address */

  /* Difference Config ET-TFT240320TP Rev.B & Rev.C */
  //LCD_WriteReg(R96,  0x2700); /* Gate Scan Line For ET-TFT240320TP3.2 RevB */
  LCD_WriteReg(R96,  0xA700); /* Gate Scan Line For ET-TFT240320TP3.2 RevC */

  LCD_WriteReg(R97,  0x0001); /* NDL,VLE, REV */
  LCD_WriteReg(R106, 0x0000); /* set scrolling line */

  /* Partial Display Control -----------------------------------------------*/
  LCD_WriteReg(R128, 0x0000);
  LCD_WriteReg(R129, 0x0000);
  LCD_WriteReg(R130, 0x0000);
  LCD_WriteReg(R131, 0x0000);
  LCD_WriteReg(R132, 0x0000);
  LCD_WriteReg(R133, 0x0000);

  /* Panel Control ---------------------------------------------------------*/
  LCD_WriteReg(R144, 0x0010);
  LCD_WriteReg(R146, 0x0000);
  LCD_WriteReg(R147, 0x0003);
  LCD_WriteReg(R149, 0x0110);
  LCD_WriteReg(R151, 0x0000);
  LCD_WriteReg(R152, 0x0000);

  /* Set GRAM write direction and BGR = 1 */
  /* I/D=01 (Horizontal : increment, Vertical : decrement) */
  /* AM=1 (address is updated in vertical writing direction) */
  LCD_WriteReg(R3, 0x1018);
  LCD_WriteReg(R7, 0x0173); /* 262K color and display ON */

  ///* Set GRAM write direction and BGR = 1
  //   I/D=10 (Horizontal : increment, Vertical : increment)
  //   AM=1 (address is updated in vertical writing direction)                  */
  //LCD_WriteReg(R3, 0x1038);
  //LCD_WriteReg(R7, 0x0173); /* 262K color and display ON */
}

void LCD_Clear(uint16_t Color)
{
  uint32_t index = 0;
  
  LCD_SetCursor(0x00, 0x013F); 
  LCD_WriteRAM_Prepare(); /* Prepare to write GRAM */
  for(index = 0; index < 76800; index++)
  {
    LCD_WriteRAM(Color);
  }
  //GPIO_WriteBit(LCD_CS_GPIO_PORT, LCD_CS_PIN, Bit_SET); 
  HAL_GPIO_WritePin(LCD_CS_GPIO_PORT, LCD_CS_PIN, GPIO_PIN_SET); 
}

void LCD_SetCursor(uint8_t Xpos, uint16_t Ypos)
{
 LCD_WriteReg(R32, Xpos);
 LCD_WriteReg(R33, Ypos);
}

void LCD_DrawChar(uint8_t Xpos, uint16_t Ypos, const uint16_t *c)
{
  uint32_t index = 0, i = 0;
  uint8_t Xaddress = 0;
   
  Xaddress = Xpos;
  
  LCD_SetCursor(Xaddress, Ypos);
  
  for(index = 0; index < 24; index++)
  {
    LCD_WriteRAM_Prepare(); /* Prepare to write GRAM */
    for(i = 0; i < 16; i++)
    {
      if((c[index] & (1 << i)) == 0x00)
      {
        LCD_WriteRAM(BackColor);
      }
      else
      {
        LCD_WriteRAM(TextColor);
      }
    }   
    //GPIO_WriteBit(LCD_CS_GPIO_PORT, LCD_CS_PIN, Bit_SET); 
		HAL_GPIO_WritePin(LCD_CS_GPIO_PORT, LCD_CS_PIN, GPIO_PIN_SET);
    Xaddress++;
    LCD_SetCursor(Xaddress, Ypos);
  }
}

void LCD_DrawLine(uint8_t Xpos, uint16_t Ypos, uint16_t Length, uint8_t Direction)
{
  uint32_t i = 0;
  
  LCD_SetCursor(Xpos, Ypos);
  if(Direction == Horizontal)
  { 
    LCD_WriteRAM_Prepare(); /* Prepare to write GRAM */
    for(i = 0; i < Length; i++)
    {
      LCD_WriteRAM(TextColor);
    }
    //GPIO_WriteBit(LCD_CS_GPIO_PORT, LCD_CS_PIN, Bit_SET);
		HAL_GPIO_WritePin(LCD_CS_GPIO_PORT, LCD_CS_PIN, GPIO_PIN_SET);
  }
  else
  {
    for(i = 0; i < Length; i++)
    {
      LCD_WriteRAMWord(TextColor);
      Xpos++;
      LCD_SetCursor(Xpos, Ypos);
    }
  }
}

unsigned char TCS_SPI_Write_Byte(unsigned char DataByte)
{
  unsigned char Bit,result = 0 ;				 	   

  for (Bit = 0; Bit < 8; Bit++)              // 8 Bit Write
  {		
    HAL_GPIO_WritePin(TCS_GPIO_PORT, TCS_SCK_PIN, GPIO_PIN_SET); // Start Clock  High

		//--------- write Data ---------
		if((DataByte & 0x80)== 0x80)
		   HAL_GPIO_WritePin(TCS_GPIO_PORT, TCS_MOSI_PIN, GPIO_PIN_SET); // Set bit data = 1
		else
		   HAL_GPIO_WritePin(TCS_GPIO_PORT, TCS_MOSI_PIN, GPIO_PIN_RESET);  // Clear bit data = 0
		   	
		HAL_GPIO_WritePin(TCS_GPIO_PORT, TCS_SCK_PIN, GPIO_PIN_RESET);    // Clock low

		DataByte <<= 1;	 // Shift Next Bit Data
      
	  	//---------- Read Data -------
	    result <<= 1;	
	 											  	  
		if (HAL_GPIO_ReadPin(TCS_GPIO_PORT,TCS_MISO_PIN) == GPIO_PIN_SET)
        {
		  result |= 0x01;
		}

	  }

	  return (result);                    
}

uint16_t TCS_Read_X(void)
{
  int32_t x, xr;

  long tcs_adc_X ,tcs_adc_Y;
  unsigned char buf_data[4]={0,0,0,0};

  if (HAL_GPIO_ReadPin(TCS_GPIO_PORT,TCS_PEN_PIN) == GPIO_PIN_RESET)
  {
    HAL_GPIO_WritePin(TCS_GPIO_PORT, TCS_CS_PIN, GPIO_PIN_RESET);							// Enable Touch Interface
	
    buf_data[0] = TCS_SPI_Write_Byte(0xD0);											// Write Command Measure X-Position 
		buf_data[0] = TCS_SPI_Write_Byte(0x00);											// Read ADC data X-Position (7-bit byte High) data: 0ddddddd	(bit) 
		buf_data[1] = TCS_SPI_Write_Byte(0x90);											// Write Command Measure Y-Position ; Read ADC data X-Position (5-bit byte Low)  data:ddddd000(bit)
		buf_data[2] = TCS_SPI_Write_Byte(0x00);											// Read ADC data Y-Position(7-bit byte High) data: 0ddddddd (bit)
		buf_data[3] = TCS_SPI_Write_Byte(0x00);											// Read ADC data Y-Position(5-bit byte Low)  data: ddddd000 (bit)

		tcs_adc_X  = buf_data[0];														// Mark ADC Data X-Position 12 bit
		tcs_adc_X  = tcs_adc_X << 5;
		tcs_adc_X |= buf_data[1] >> 3;
		tcs_adc_X  = tcs_adc_X & 0x00000FFF;
	 
		tcs_adc_Y  = buf_data[2];   												// Mark ADC Data Y-Position 12 bit
		tcs_adc_Y  = tcs_adc_Y << 5;   											// Shift 7 bit High
		tcs_adc_Y |= buf_data[3] >> 3;   										// Shift 5 bit low
		tcs_adc_Y  = tcs_adc_Y & 0x00000FFF;								// total ADC data 12 bit
	
		HAL_GPIO_WritePin(TCS_GPIO_PORT, TCS_CS_PIN, GPIO_PIN_SET);								// Disable Touch Interface			
	
    x = 4095-tcs_adc_Y;  															// ADC 12 bit :LCD Start Landscape	
  }
  else
  {
    x = 0;
  }
  
  /* first correction */
  xr =  (x * 320) >> 12;
 
  /* second correction */
  xr = ((xr * 32)/29) - 17;
  
  if(xr <= 0)
  {
    xr = 0;
  }

  return (uint16_t)(xr); 
}

uint16_t TCS_Read_Y(void)
{
  int32_t y, yr;

  //long dif_adc_X,dif_adc_Y;

  long tcs_adc_X ,tcs_adc_Y;
  unsigned char buf_data[4]={0,0,0,0};

  if (HAL_GPIO_ReadPin(TCS_GPIO_PORT,TCS_PEN_PIN) == GPIO_PIN_RESET)
  {    
    HAL_GPIO_WritePin(TCS_GPIO_PORT, TCS_CS_PIN, GPIO_PIN_RESET);									// Enable Touch Interface
	
    buf_data[0] = TCS_SPI_Write_Byte(0xD0);													// Write Command Measure X-Position 
		buf_data[0] = TCS_SPI_Write_Byte(0x00);													// Read ADC data X-Position (7-bit byte High) data: 0ddddddd	(bit) 
		buf_data[1] = TCS_SPI_Write_Byte(0x90);													// Write Command Measure Y-Position ; Read ADC data X-Position (5-bit byte Low)  data:ddddd000(bit)
		buf_data[2] = TCS_SPI_Write_Byte(0x00);													// Read ADC data Y-Position(7-bit byte High) data: 0ddddddd (bit)
		buf_data[3] = TCS_SPI_Write_Byte(0x00);													// Read ADC data Y-Position(5-bit byte Low)  data: ddddd000 (bit)

		tcs_adc_X  = buf_data[0];																// Mark ADC Data X-Position 12 bit
		tcs_adc_X  = tcs_adc_X << 5;
		tcs_adc_X |= buf_data[1] >> 3;
		tcs_adc_X  = tcs_adc_X & 0x00000FFF;
	 
		tcs_adc_Y  = buf_data[2];   														// Mark ADC Data Y-Position 12 bit
		tcs_adc_Y  = tcs_adc_Y << 5;   													// Shift 7 bit High
		tcs_adc_Y |= buf_data[3] >> 3;   												// Shift 5 bit low
		tcs_adc_Y  = tcs_adc_Y & 0x00000FFF;										// total ADC data 12 bit
	
	HAL_GPIO_WritePin(TCS_GPIO_PORT, TCS_CS_PIN, GPIO_PIN_SET);										// Disable Touch Interface				

    y = tcs_adc_X;	 																		// ADC 12 bit :LCD Start Landscape	
  }
  else
  {
    y = 0;
  }
  
  yr= (y * 240) >> 12;
  yr = ((yr * 240) / 217) - 12;
  
  if(yr <= 0)
  {
    yr = 0;
  }

  return (uint16_t)(yr); 
}
